name:                opt-reflex
version:             0.1.0.0
synopsis:            Adds command line options to javascript
description:         Please see README.md
homepage:            https://github.com/mckeankylej/opt-reflex#readme
license:             BSD3
license-file:        LICENSE
author:              Kyle McKean
maintainer:          mckean.kylej@gmail.com
copyright:           2016 Kyle McKean
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     GHCJS.Internal.Options
                     , Reflex.Options
  build-depends:       base >= 4.7 && < 5
                     , ghcjs-base
                     , reflex
                     , reflex-dom
                     , stm
                     , optparse-applicative
                     , lens-simple
                     , transformers
  default-language:    Haskell2010
  default-extensions:  LambdaCase
                     , RecursiveDo
                     , OverloadedStrings

executable opt-reflex
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base
                     , opt-reflex
                     , reflex-dom
                     , optparse-applicative
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mckeankylej/opt-reflex